{
  "version": 4,
  "terraform_version": "1.10.2",
  "serial": 5,
  "lineage": "a9d836f8-08b4-8527-be96-053732ac4dd8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b4f379183e5706b9",
            "arn": "arn:aws:ec2:us-east-1:600627356570:instance/i-009dcb284e740077a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-009dcb284e740077a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09f84064a9b718790",
            "private_dns": "ip-172-31-37-111.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.37.111",
            "public_dns": "ec2-3-81-209-122.compute-1.amazonaws.com",
            "public_ip": "3.81.209.122",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-071c31e1e58aa52a1",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08552b8a3fc9570b4",
            "tags": {
              "Name": "roboshop"
            },
            "tags_all": {
              "Name": "roboshop"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02eb61a80bb8ce988"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "roboshop-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627356570:security-group/sg-091ad33a9351d0fe5",
            "description": "Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-091ad33a9351d0fe5",
            "ingress": [],
            "name": "allow-all-tf",
            "name_prefix": "",
            "owner_id": "600627356570",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "roboshop"
            },
            "tags_all": {
              "Name": "roboshop"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c3eda271a595116"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_out_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627356570:security-group-rule/sgr-0eb45d26671c8a2e0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-0eb45d26671c8a2e0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-091ad33a9351d0fe5",
            "security_group_rule_id": "sgr-0eb45d26671c8a2e0",
            "tags": {
              "Name": "roboshop"
            },
            "tags_all": {
              "Name": "roboshop"
            },
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.roboshop-all"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600627356570:security-group-rule/sgr-07614ece3c07edffc",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-07614ece3c07edffc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-091ad33a9351d0fe5",
            "security_group_rule_id": "sgr-07614ece3c07edffc",
            "tags": {
              "Name": "roboshop"
            },
            "tags_all": {
              "Name": "roboshop"
            },
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.roboshop-all"
          ]
        }
      ]
    }
  ]
}